--- a/sass/views/front/_item.scss
+++ b/sass/views/front/_item.scss
@@ -6,6 +6,14 @@ body.front.item {
     div.main.container {
         margin-top: 30px;
         margin-bottom: 30px;
+        
+        #main-content {
+            p.description {
+                @include all-but-phones() {
+                    margin-bottom: 2rem;
+                }
+            }
+        }
 
         #basket-form-container {
             @include phones() {
@@ -13,15 +21,12 @@ body.front.item {
             }
         }
 
-        #main-content {
+        #main-content, #basket-form-container, .sidebar-content, .set {
             // don't understand why this is necessary, but it prevents horizontal overflow on phones
-            max-width: calc(100% - 0.75rem);
-            margin: 0 auto;
-
-            p.description {
-                @include all-but-phones() {
-                    margin-bottom: 2rem;
-                }
+            @include phones() {
+                max-width: calc(100% - 0.75rem);
+                margin-left: auto;
+                margin-right: auto;
             }
         }
 
@@ -71,6 +76,14 @@ body.front.item {
             background-color: #fff;
             @include drop-shadow(0, 2px, 4px);
             @include border-bottom-radius($radius);
+
+            @include phones() {
+                .box {
+                    .header {
+                        @include border-top-radius($radius);
+                    }
+                }
+            }
 
             select.custom-select, div.btn-group {
                 border: 1px solid $edge-color;
